--- a/src/main/java/com/comicboys/project/config/config.properties
+++ b/src/main/java/com/comicboys/project/config/config.properties
@@ -4,5 +4,5 @@ MODELS_URL = https://api.openai.com/v1/models
 ORG_KEY = 
 API_KEY = 
 MODEL = gpt-4o-mini
-source_language = english
-target_language = italian
+SOURCE_LANGUAGE = english
+TARGET_LANGUAGE = italian
