added feature to generate audio and create a tsv file that stores the audio index

--- a/assets/config/config.properties
+++ b/assets/config/config.properties
@@ -4,5 +4,10 @@ MODELS_URL = https://api.openai.com/v1/models
 ORG_KEY =
 API_KEY =
 MODEL = gpt-4o-mini
+
+TTS_VOICE= nova
+TTS_MAX_RETRIES= 3
+TTS_RETRY_DELAY_MS= 20000
+
 SOURCE_LANGUAGE = english
 TARGET_LANGUAGE = italian
